--- a/morse-code-quiz/src/app/encode/encode.component.css
+++ b/morse-code-quiz/src/app/encode/encode.component.css
@@ -1,15 +1,7 @@
-table.encode-decode-table{
-  border-collapse: collapse;
-}
 
-table.encode-decode-table {
-  width: 300px;
-  height: 150px;
-  border: 1px solid black;
-}
 
 button{
-  background-color: red;
+  background-color: turquoise;
   padding: auto;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -19,5 +11,11 @@ button{
 input {
   width: 90%;
   max-width: 350px;
+  margin: 15px;
 
+}
+
+input.ng-invalid{
+  background-color: red;
+  color: white;
 }
