--- a/morse-code-quiz/src/app/decode/decode.component.html
+++ b/morse-code-quiz/src/app/decode/decode.component.html
@@ -10,7 +10,7 @@
         id="encryptedText"
         name="encryptedText"
         [(ngModel)]="encodedText"
-        pattern="[-. ]+"
+        pattern="[-./ ]+"
         required
         #encryptedText="ngModel"
       />
